--- a/index.html
+++ b/index.html
@@ -47,8 +47,13 @@
 <div>
 <h2>接下來我也不知道要放什麼，所以之後想到再說吧</h2>
 
+<a href="https://www.kadokado.com.tw/user/236039">小說作品</a>
+
+<p> </p>
+
 <a href="https://www.facebook.com/share/1AbFAaDazD/"
   >個人facebook</a>
+
 
 </body>
 </html>
