--- a/index.html
+++ b/index.html
@@ -1,59 +1,76 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
+
 <head>
   <meta charset="UTF-8">
   <title>無限の彼方の悖論 時空に残された痕跡 </title>
-  <style>
-    body {
-      background-color: #1f1e33;
-      font-family: "微軟正黑體", sans-serif;
-      color:#fff;
-    }
-
-    h1 {
-      color: #d9d9d9;
-      text-align: center;
-    }
-
-    p {
-      font-size: 20px;
-      line-height: 1.6;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" type="text/css">
 </head>
+
 <body>
-<h1>無限の彼方の悖論、時の虚空を抜けて 時空に残された痕跡</h1>
-<h1>"Endless Infinity Beyond Paradox, Through the Void of Time"</h1>
- <div class="profile">
-    <h2>關於我，Infinity Beyond Paradox</h2>
-    <p>一個超級死宅，患上了嚴重的中二病，於是就取了這個感覺還不錯的名字，雖然有點長，不過我覺得好就沒問題。</p>
-    <p>雖然要介紹自己，但是我真的不知道要說什麼，因為我不覺得自己有什麼特別的，長得很醜，成績也普普，腦袋也不太好吧。而且我這個人奇怪的點好像也不少，假如我是galgame世界的男主，那可能這一款遊戲是地獄難度，因為我不溫柔不體貼也無法善解人意，我就是如此冷血無情的人，更別說攻略他人了，根本是天方夜譚。</p>
-</div>
-<div>
-    <h2>關於我的性格</h2>
-    <p>性格的部分啊……我自認為自己是個沉著冷靜的人？好吧，我覺得其實自己很暴躁，可能會為了一些有的沒的小事就感到不耐煩，所以脾氣很差，個性很爛。從各種蛛絲馬跡可以看出來，我完全看不出來自己有什麼優點，所以人生註定沒有朋友，孤獨終老，我為自己感到悲哀。</p>
-    <p>剛剛說了那麼多，其實都是因為我是社恐啦!我是處於中二病和社恐的疊加態，所以我在外面會很低調，私底下就會開始鬼吼鬼叫，就像現在，我正在創作我的黑歷史。未來的我一定不會知道過去的我為什麼要這麼做，其實做這個就是暑假無聊所以想找事情做，也想學一點東西，所以照著攻略和教學簡單做了個出來。大概就這樣，我也不知道自己有什麼好介紹了，未來想到再補吧，</p>
-</div>
-<div>
-    <h2>平常玩的遊戲</h2>
-    <p>同時，我也是個音遊玩家，雖然玩很爛，不過我開心就好，但是知道自己很爛還是感覺很悲傷，我玩的像是Arcaea, lanota, phigros, paradigm reboot,cytus2等，基本上還是移動端下落式為主，有機會（很久一次）也會去打街機，像是maimai和chumithm，不過比移動端弱太多了，跟沒接觸音遊的人一個水平。現在的我大多都把遊戲的重心放在上面，不過有時候還是會玩像是鳴潮、崩鐵之類的二次元遊戲，又或者登一下FGO抽老婆。</p>
-</div>
 
-<div>
-    <h2>興趣與專長</h2>
-    <p>興趣嗎？我有什麼興趣其實我也不是很清楚，我就是一個人生中的迷途者，所以我有什麼興趣對我來說還真是個難題。</p>
-    <p>除了前面提到的遊戲外，我好像也沒特別做什麼，我可能喜歡邏輯思考，所以數學物理強一點，會一點下圍棋，然後我就不知道了，因為我只看得到自己的缺點看不到自己的優點。</p>
-</div>
-<div>
-<h2>接下來我也不知道要放什麼，所以之後想到再說吧</h2>
 
-<a href="https://www.kadokado.com.tw/user/236039">小說作品</a>
+<body onload ="javascript:alert('你來到了不祥之地，此地蘊含著強烈的未知與危險。');">
 
-<p> </p>
+<header>
+  <h1>無限の彼方の悖論、時の虚空を抜けて 時空に残された痕跡</h1>
+  <h1>"Endless Infinity Beyond Paradox, Through the Void of Time"</h1>
+</header>
 
-<a href="https://www.facebook.com/share/1AbFAaDazD/"
-  >個人facebook</a>
+<hr>
 
+<nav>
+  <a href="index.html">首頁</a>
+  <a href="about.html">關於我</a>
+  <a href="games.html">遊戲</a>
+  <a href="contact.html">聯絡</a>
+  <a href="achievement.html">成就</a>
+</nav>
+
+<main>
+
+<article> 
+  <h2>關於這一個網站</h2>
+  <p>這是一個關於Endless Infinity Beyond Paradox, Through the Void of Time簡稱Infinity Beyond Paradox的人他的個人網站。<br>
+  這個網站我想放什麼就放什麼，反正是我自己做的。</p>
+</article>
+
+
+<br>
+<br>
+<br>
+
+<h2>關於這個網站可能會有的一些問題</h2>
+
+
+<!-- 這裡是問題區 -->
+
+
+<article>
+
+<p><b>這個網站是誰做的？怎麼那麼破。</b></p>
+
+<p>這個網站是我做的，對，就是我Infinity Beyond Paradox。<br>
+為什麼那麼爛?因為我不會做啊!你知道自學很難嗎?所以就變成這樣了。我很努力好嗎，有意見就來教我。</p>
+
+</article>
+
+
+<article>
+
+  <p><b>Endless Infinity Beyond Paradox, Through the Void of Time是什麼鬼名字，誰想的?</b></p>
+
+  <p>我想了一個多小時好嗎?你不覺得取得很好嗎?這名字帶有一些深刻的意涵，不是隨便拿一些單字組合的喔。<br>
+  反正我覺得很好。</p>
+</article>
+<!-- 這裡是問題區結束 -->
+
+</main>
+
+<footer>
+  <p>版權所有 &copy; 2025 Infinity Beyond Paradox</p>
+
+</footer>
 
 </body>
 </html>
