--- a/index.html
+++ b/index.html
@@ -4,47 +4,81 @@
 <head>
   <meta charset="UTF-8">
   <title>無限の彼方の悖論 時空に残された痕跡 </title>
-  <link rel="stylesheet" href="style.css" type="text/css">
+  <link rel="stylesheet" href="css/style.css" type="text/css">
+
+  <!-- 這裡是進入黑暗紀錄簿的程式碼 -->
+  <!-- 需要輸入正確的暗號才能進入 -->
+  <script>
+    function entrydarkness() {
+      var signal = prompt("請輸入暗號:");
+
+      if (signal == "darkness") {
+
+        alert("歡迎來到黑暗紀錄簿");
+        window.location.href = "pages/darkness_entry.html";
+
+      } else {
+        alert("暗號錯誤");
+
+        return;
+      }
+    }
+
+    function entryif() {
+      window.location.href = "pages/if.html";
+    }
+  </script>
+
 </head>
 
 <body>
 
-
 <body onload ="javascript:alert('你來到了不祥之地，此地蘊含著強烈的未知與危險。');">
 
-<header>
+<nav>
+  <a href="index.html">首頁</a>
+  <a href="pages/about.html">關於我</a>
+  <a href="pages/games.html">遊戲</a>  
+  <a href="pages/achievement.html">成就</a>
+  <a href="pages/else.html">其他</a>
+</nav>
+
+<hr>
+
+<header  id="top">
   <h1>無限の彼方の悖論、時の虚空を抜けて 時空に残された痕跡</h1>
   <h1>"Endless Infinity Beyond Paradox, Through the Void of Time"</h1>
 </header>
 
 <hr>
 
-<nav>
-  <a href="index.html">首頁</a>
-  <a href="about.html">關於我</a>
-  <a href="games.html">遊戲</a>
-  <a href="contact.html">聯絡</a>
-  <a href="achievement.html">成就</a>
-</nav>
-
 <main>
 
-<article> 
+  <!--前言-->
+<article>
+  <h2>前言</h2>
+  <p>你來到了這裡，可能是透過兩種途徑。
+    <ul>
+      <li>你成為了我FB的好友，透過置頂貼文連結進來。</li>
+      <li>我不知道為什麼為什麼把連結給你了。</li>
+    </ul>
+    <br>
+    無論是哪種方式，來到了這裡必定是經過我本人同意，畢竟我的FB不太加人，在我寫這部分的當下沒有任何好友，<s>除非你駭進github或是不知道從哪跑進來</s>，總而言之，或許這代表著我對你的信任?或是其他的什麼?我也說不清楚。<br>
+    反正這一個網站看到的人大概寥寥無幾，你是其中之一，這算是一個小小禮物吧，雖然我不是很確定你是否想了解我，但如果你想的話，想必這裡會有一些你想知道的東西。
+  </p>
+
+</article> 
+
+<article>
   <h2>關於這一個網站</h2>
   <p>這是一個關於Endless Infinity Beyond Paradox, Through the Void of Time簡稱Infinity Beyond Paradox的人他的個人網站。<br>
   這個網站我想放什麼就放什麼，反正是我自己做的。</p>
 </article>
 
-
-<br>
-<br>
-<br>
-
 <h2>關於這個網站可能會有的一些問題</h2>
 
-
 <!-- 這裡是問題區 -->
-
+<div>
 
 <article>
 
@@ -63,11 +97,27 @@
   <p>我想了一個多小時好嗎?你不覺得取得很好嗎?這名字帶有一些深刻的意涵，不是隨便拿一些單字組合的喔。<br>
   反正我覺得很好。</p>
 </article>
+
+<article>
+  <h2>為什麼這個網站只有文字，沒有圖片?</h2>
+  <p>因為我不知道可以放什麼圖片，如果之後有畫出來什麼東西就會放上來了，我正在努力了，應該吧。</p>
+</article>
+
+</div>
 <!-- 這裡是問題區結束 -->
+
+<input type="button" value="     " onclick="entryif()">
+
+<br>
+
+<input type="button" value="???????" onclick="entrydarkness()">
 
 </main>
 
+<hr>
+
 <footer>
+  <a href="#top">回到頂端</a>
   <p>版權所有 &copy; 2025 Infinity Beyond Paradox</p>
 
 </footer>
